--- a/app/src/main/res/layout/activity_add_averia.xml
+++ b/app/src/main/res/layout/activity_add_averia.xml
@@ -19,13 +19,52 @@
             android:gravity="center_horizontal"
             android:layout_gravity="center_vertical"
             android:textSize="22sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
             />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="13dp"
+            android:layout_weight="1"
+            android:text="Fotografía:  "
+            android:textSize="15sp"
+            android:tooltipText="Fotografía de averia"
+            android:textStyle="bold"/>
+        <LinearLayout
+            android:layout_width="250dp"
+            android:layout_height="100dp"
+            android:layout_gravity="left">
+
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/imagen_averia_add"
+                />
+            <Button
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/btn_agregar_foto_add"
+                android:drawableLeft="@drawable/camera"
+                android:textColor="@android:color/holo_orange_light"
+                android:backgroundTint="#3ecf721b"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -34,7 +73,8 @@
             android:text="Id:"
             android:textSize="15sp"
             android:layout_marginTop="13dp"
-            android:tooltipText="Nombre de averia"/>
+            android:tooltipText="Nombre de averia"
+            android:textStyle="bold"/>
         <LinearLayout
             android:layout_width="250dp"
             android:layout_height="wrap_content">
@@ -67,7 +107,8 @@
             android:text="Nombre:"
             android:textSize="15sp"
             android:layout_marginTop="13dp"
-            android:tooltipText="Nombre de averia"/>
+            android:tooltipText="Nombre de averia"
+            android:textStyle="bold"/>
         <LinearLayout
             android:layout_width="250dp"
             android:layout_height="wrap_content">
@@ -99,7 +140,8 @@
             android:text="Tipo:"
             android:textSize="15sp"
             android:layout_marginTop="13dp"
-            android:tooltipText="Tipo de averia"/>
+            android:tooltipText="Tipo de averia"
+            android:textStyle="bold"/>
         <LinearLayout
             android:layout_width="250dp"
             android:layout_height="wrap_content">
@@ -131,21 +173,33 @@
             android:text="Fecha: "
             android:textSize="15sp"
             android:layout_marginTop="13dp"
-            android:tooltipText="Fecha de averia"/>
+            android:tooltipText="Fecha de averia"
+            android:textStyle="bold"/>
         <LinearLayout
             android:layout_width="250dp"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/fecha_averia_add"
-                android:layout_width="match_parent"
+                android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:layout_marginTop="13dp"
                 android:layout_weight="1"
                 android:background="@drawable/corner_rounded"
                 android:ems="10"
                 android:gravity="left"
-                android:inputType="date" />
+                android:inputType="date"/>
+
+            <ImageButton
+                android:id="@+id/ib_obtener_fecha"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:src="@drawable/date"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintHorizontal_bias="0.505"
+                android:layout_marginTop="13dp"
+                tools:ignore="ContentDescription" />
 
         </LinearLayout>
 
@@ -163,7 +217,8 @@
             android:text="Descripción:  "
             android:textSize="15sp"
             android:layout_marginTop="13dp"
-            android:tooltipText="Descripción de averia"/>
+            android:tooltipText="Descripción de averia"
+            android:textStyle="bold"/>
         <LinearLayout
             android:layout_width="250dp"
             android:layout_height="wrap_content">
@@ -182,48 +237,12 @@
         </LinearLayout>
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="13dp"
-            android:layout_weight="1"
-            android:text="Fotografía:  "
-            android:textSize="15sp"
-            android:tooltipText="Fotografía de averia" />
-        <LinearLayout
-            android:layout_width="250dp"
-            android:layout_height="100dp"
-            android:layout_gravity="left">
-
-            <Button
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:id="@+id/btn_agregar_foto_add"
-                android:drawableLeft="@drawable/camera"
-                android:textColor="@android:color/holo_orange_light"
-                android:backgroundTint="#5f6a88"/>
-
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:id="@+id/imagen_averia_add"
-                />
-
-
-        </LinearLayout>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:gravity="center">
 
         <Button
