--- a/app/src/main/res/layout/activity_details_averia.xml
+++ b/app/src/main/res/layout/activity_details_averia.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_gravity="center">
@@ -18,7 +17,37 @@
             android:gravity="center_horizontal"
             android:layout_gravity="center_vertical"
             android:textSize="22sp"
+            android:textColor="@color/colorAccent"
+            android:textStyle="bold"
             />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="13dp"
+            android:layout_weight="1"
+            android:text="Fotografía:  "
+            android:textSize="15sp"
+            android:tooltipText="Fotografía de averia"
+            android:textStyle="bold"/>
+        <LinearLayout
+            android:layout_width="250dp"
+            android:layout_height="100dp"
+            android:layout_gravity="left">
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/imagen_averia_det"/>
+
+        </LinearLayout>
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,7 +62,9 @@
             android:text="Id:"
             android:textSize="15sp"
             android:layout_marginTop="13dp"
-            android:tooltipText="Nombre de averia"/>
+            android:tooltipText="Nombre de averia"
+            android:textStyle="bold"/>
+
         <LinearLayout
             android:layout_width="250dp"
             android:layout_height="wrap_content">
@@ -46,6 +77,7 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:gravity="left"
+
                 />
 
         </LinearLayout>
@@ -64,7 +96,8 @@
             android:text="Nombre:"
             android:textSize="15sp"
             android:layout_marginTop="13dp"
-            android:tooltipText="Nombre de averia"/>
+            android:tooltipText="Nombre de averia"
+            android:textStyle="bold"/>
         <LinearLayout
             android:layout_width="250dp"
             android:layout_height="wrap_content">
@@ -95,7 +128,8 @@
             android:text="Tipo:"
             android:textSize="15sp"
             android:layout_marginTop="13dp"
-            android:tooltipText="Tipo de averia"/>
+            android:tooltipText="Tipo de averia"
+            android:textStyle="bold"/>
         <LinearLayout
             android:layout_width="250dp"
             android:layout_height="wrap_content">
@@ -126,7 +160,8 @@
             android:text="Usuario :"
             android:textSize="15sp"
             android:layout_marginTop="13dp"
-            android:tooltipText="Usuario"/>
+            android:tooltipText="Usuario"
+            android:textStyle="bold"/>
         <LinearLayout
             android:layout_width="250dp"
             android:layout_height="wrap_content">
@@ -157,7 +192,8 @@
             android:text="Fecha: "
             android:textSize="15sp"
             android:layout_marginTop="13dp"
-            android:tooltipText="Fecha de averia"/>
+            android:tooltipText="Fecha de averia"
+            android:textStyle="bold"/>
         <LinearLayout
             android:layout_width="250dp"
             android:layout_height="wrap_content">
@@ -188,7 +224,8 @@
             android:text="Descripción:  "
             android:textSize="15sp"
             android:layout_marginTop="13dp"
-            android:tooltipText="Descripción de averia"/>
+            android:tooltipText="Descripción de averia"
+            android:textStyle="bold"/>
         <LinearLayout
             android:layout_width="250dp"
             android:layout_height="wrap_content">
@@ -219,7 +256,8 @@
             android:text="Ubicación:  "
             android:textSize="15sp"
             android:layout_marginTop="13dp"
-            android:tooltipText="Ubicación de averia"/>
+            android:tooltipText="Ubicación de averia"
+            android:textStyle="bold"/>
         <LinearLayout
             android:layout_width="250dp"
             android:layout_height="wrap_content">
@@ -237,38 +275,12 @@
         </LinearLayout>
 
     </LinearLayout>
-    <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_marginTop="10dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
-        android:layout_weight="1"
-        android:text="Fotografía:  "
-        android:textSize="15sp"
-        android:tooltipText="Fotografía de averia" />
-    <LinearLayout
-        android:layout_width="250dp"
-        android:layout_height="100dp"
-        android:layout_gravity="left">
-
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:id="@+id/imagen_averia_det"/>
-
-    </LinearLayout>
-
-</LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="15dp"
         android:gravity="center">
 
         <Button
