--- a/app/src/main/res/layout/activity_update_averia.xml
+++ b/app/src/main/res/layout/activity_update_averia.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_gravity="center">
 
@@ -17,7 +20,82 @@
             android:gravity="center_horizontal"
             android:layout_gravity="center_vertical"
             android:textSize="22sp"
+            android:textColor="@color/colorAccent"
+            android:textStyle="bold"
             />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="13dp"
+            android:layout_weight="1"
+            android:text="Fotografía:  "
+            android:textSize="15sp"
+            android:tooltipText="Fotografía de averia"
+            android:textStyle="bold"/>
+
+        <LinearLayout
+            android:layout_width="250dp"
+            android:layout_height="100dp"
+            android:layout_gravity="left">
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/imagen_averia_up"
+                />
+
+            <Button
+                android:id="@+id/btn_agregar_foto_up"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:backgroundTint="#5f6a88"
+                android:drawableLeft="@drawable/camera"
+                android:textColor="@android:color/holo_orange_light" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="5dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Id:"
+            android:textSize="15sp"
+            android:layout_marginTop="10dp"
+            android:tooltipText="Nombre de averia"
+            android:textStyle="bold"/>
+        <LinearLayout
+            android:layout_width="250dp"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/id_averia_up"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="13dp"
+                android:layout_weight="1"
+                android:background="@drawable/corner_rounded"
+                android:ems="10"
+                android:gravity="left"
+                android:enabled="false"/>
+
+        </LinearLayout>
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,41 +107,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Id:"
-            android:textSize="15sp"
-            android:layout_marginTop="10dp"
-            android:tooltipText="Nombre de averia"/>
-        <LinearLayout
-            android:layout_width="250dp"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/id_averia_up"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="13dp"
-                android:layout_weight="1"
-                android:ems="10"
-                android:gravity="left"
-                />
-
-        </LinearLayout>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="Nombre:"
             android:textSize="15sp"
             android:layout_marginTop="13dp"
-            android:tooltipText="Nombre de averia"/>
+            android:tooltipText="Nombre de averia"
+            android:textStyle="bold"/>
         <LinearLayout
             android:layout_width="250dp"
             android:layout_height="wrap_content">
@@ -95,7 +143,8 @@
             android:text="Tipo:"
             android:textSize="15sp"
             android:layout_marginTop="13dp"
-            android:tooltipText="Tipo de averia"/>
+            android:tooltipText="Tipo de averia"
+            android:textStyle="bold"/>
         <LinearLayout
             android:layout_width="250dp"
             android:layout_height="wrap_content">
@@ -127,12 +176,13 @@
             android:text="Usuario :"
             android:textSize="15sp"
             android:layout_marginTop="13dp"
-            android:tooltipText="Usuario"/>
+            android:tooltipText="Usuario"
+            android:textStyle="bold"/>
         <LinearLayout
             android:layout_width="250dp"
             android:layout_height="wrap_content">
 
-            <TextView
+            <EditText
                 android:id="@+id/usuario_averia_up"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -140,6 +190,8 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:gravity="left"
+                android:background="@drawable/corner_rounded"
+                android:enabled="false"
                 />
 
         </LinearLayout>
@@ -158,14 +210,16 @@
             android:text="Fecha: "
             android:textSize="15sp"
             android:layout_marginTop="13dp"
-            android:tooltipText="Fecha de averia"/>
+            android:tooltipText="Fecha de averia"
+            android:textStyle="bold"/>
         <LinearLayout
             android:layout_width="250dp"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/fecha_averia_up"
-                android:layout_width="match_parent"
+                android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:layout_marginTop="13dp"
                 android:layout_weight="1"
@@ -173,6 +227,16 @@
                 android:ems="10"
                 android:gravity="left"
                 android:inputType="date" />
+
+            <ImageButton
+                android:id="@+id/ib_obtener_fecha_up"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:src="@drawable/date"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintHorizontal_bias="0.505"
+                android:layout_marginTop="13dp"
+                tools:ignore="ContentDescription" />
 
         </LinearLayout>
 
@@ -190,7 +254,8 @@
             android:text="Descripción:  "
             android:textSize="15sp"
             android:layout_marginTop="13dp"
-            android:tooltipText="Descripción de averia"/>
+            android:tooltipText="Descripción de averia"
+            android:textStyle="bold"/>
         <LinearLayout
             android:layout_width="250dp"
             android:layout_height="wrap_content">
@@ -209,48 +274,12 @@
         </LinearLayout>
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="13dp"
-            android:layout_weight="1"
-            android:text="Fotografía:  "
-            android:textSize="15sp"
-            android:tooltipText="Fotografía de averia" />
-        <LinearLayout
-            android:layout_width="250dp"
-            android:layout_height="100dp"
-            android:layout_gravity="left">
-
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:id="@+id/imagen_averia_up"
-                />
-
-            <Button
-                android:id="@+id/btn_agregar_foto_up"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:backgroundTint="#5f6a88"
-                android:drawableLeft="@drawable/camera"
-                android:textColor="@android:color/holo_orange_light" />
-
-
-        </LinearLayout>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="15dp"
         android:gravity="center">
 
         <Button
