--- a/app/src/main/res/layout/activity_update_averia.xml
+++ b/app/src/main/res/layout/activity_update_averia.xml
@@ -2,16 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_gravity="center">
 
     <LinearLayout
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="7dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -24,12 +27,13 @@
             android:textStyle="bold"
             />
     </LinearLayout>
-
     <LinearLayout
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="7dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -52,23 +56,23 @@
                 android:id="@+id/imagen_averia_up"
                 />
 
-            <Button
+            <ImageButton
                 android:id="@+id/btn_agregar_foto_up"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:backgroundTint="#5f6a88"
-                android:drawableLeft="@drawable/camera"
-                android:textColor="@android:color/holo_orange_light" />
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@android:drawable/ic_menu_camera"
+                />
 
         </LinearLayout>
 
     </LinearLayout>
-
     <LinearLayout
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="7dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -98,10 +102,12 @@
 
     </LinearLayout>
     <LinearLayout
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="7dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -131,10 +137,12 @@
 
     </LinearLayout>
     <LinearLayout
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="7dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -164,10 +172,12 @@
 
     </LinearLayout>
     <LinearLayout
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="7dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -198,10 +208,12 @@
 
     </LinearLayout>
     <LinearLayout
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="7dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -232,7 +244,7 @@
                 android:id="@+id/ib_obtener_fecha_up"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
-                android:src="@drawable/date"
+                android:src="@android:drawable/ic_menu_my_calendar"
                 android:layout_marginLeft="8dp"
                 app:layout_constraintHorizontal_bias="0.505"
                 android:layout_marginTop="13dp"
@@ -242,10 +254,12 @@
 
     </LinearLayout>
     <LinearLayout
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="7dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -275,30 +289,49 @@
 
     </LinearLayout>
 
-    <LinearLayout
+
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/fab_menu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="15dp"
-        android:gravity="center">
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="false"
+        android:layout_alignParentRight="true"
+        android:paddingBottom="16dp"
+        android:paddingRight="16dp"
+        fab:menu_backgroundColor="#012b96a0"
+        fab:menu_fab_label="Elija una accion"
+        fab:fab_colorNormal="#2b96a0"
+        fab:fab_colorPressed="#2b96a0"
+        fab:fab_colorRipple="#99579294"
+        fab:fab_showShadow="true"
+        fab:menu_labels_colorNormal="#333333"
+        fab:menu_labels_colorPressed="#2b96a0"
+        fab:menu_labels_colorRipple="#2b96a0"
+        fab:menu_labels_showShadow="true"
+        fab:menu_labels_maxLines="-1"
+        fab:menu_labels_position="left"
+        fab:menu_openDirection="up"
+        fab:fab_shadowColor="#14000000"
+        fab:menu_labels_ellipsize="end"
+        fab:menu_labels_singleLine="true">
 
-        <Button
+        <com.github.clans.fab.FloatingActionButton
             android:id="@+id/btn_editar_averia_up"
-            android:layout_width="120dp"
-            android:layout_height="50dp"
-            android:backgroundTint="#5f6a88"
-            android:gravity="center"
-            android:text="Editar"
-            android:textColor="@android:color/holo_orange_light" />
-        <Button
-            android:id="@+id/btn_eliminar_averia_up"
-            android:layout_width="120dp"
-            android:layout_height="50dp"
-            android:backgroundTint="#5f6a88"
-            android:gravity="center"
-            android:text="Eliminar"
-            android:textColor="@android:color/holo_orange_light" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_edit"
+            fab:fab_label="Editar"
+            fab:fab_size="mini" />
 
-    </LinearLayout>
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/btn_eliminar_averia_up"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_delete"
+            fab:fab_label="Eliminar"
+            fab:fab_size="mini" />
+
+
+    </com.github.clans.fab.FloatingActionMenu>
 
 </LinearLayout>
