--- a/app/src/main/res/layout/averia_item.xml
+++ b/app/src/main/res/layout/averia_item.xml
@@ -24,7 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:textColor="@android:color/holo_red_dark"
+                android:textColor="@android:color/holo_blue_dark"
                 tools:text="1"
                 />
 
