--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:backgroundTint="@color/colorAccent">
+
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_marginTop="100dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/ajustes_n" />
-</RelativeLayout>
+        android:src="@drawable/averias"
+        android:foregroundGravity="center_vertical"/>
+    <TextView
+        android:layout_marginTop="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="Reporte de Averias"
+        android:textStyle="bold|italic"
+        android:textSize="20sp"
+        android:gravity="center_vertical"
+        android:layout_marginLeft="100dp"/>
+
+</LinearLayout>
