--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#999fae</color>
-    <color name="colorPrimaryDark">#2d3241</color>
-    <color name="colorAccent">#FFFF9538</color>
+    <color name="colorPrimaryDark">#2b96a0</color>
+    <color name="colorAccent">#58aeab</color>
 </resources>
