--- a/app/src/main/res/drawable/corner_rounded.xml
+++ b/app/src/main/res/drawable/corner_rounded.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <stroke android:width="1dp" android:color="#4ca1a7" />
+    <stroke android:width="1dp" android:color="#4f5354" />
     <solid android:color="#ffffff" />
     <padding android:left="1dp" android:right="1dp" android:top="1dp" />
     <corners android:radius="5dp" />
