--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
-    >
+    android:layout_gravity="center">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -242,26 +243,28 @@
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center"
-        android:layout_marginTop="50dp">
+        android:layout_height="match_parent"
+        android:gravity="bottom|right"
+        android:paddingBottom="0dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="5dp"
+        android:paddingTop="16dp">
 
-        <Button
+
+        <android.support.design.widget.FloatingActionButton
             android:id="@+id/btn_agregar"
-            android:layout_width="120dp"
+            android:layout_width="53dp"
             android:layout_height="50dp"
-            android:text="Agregar  "
-            android:drawableLeft="@drawable/plus"
-            android:textColor="@android:color/holo_orange_light"
-            android:backgroundTint="#5f6a88"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            />
+            android:layout_gravity="right"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginRight="0dp"
+            android:src="@drawable/create"
+            app:fabSize="normal"/>
 
-    </LinearLayout>
+    </RelativeLayout>
 
 
 
