--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -91,8 +91,8 @@
             android:layout_marginRight="10dp"
             android:textSize="17sp"
             android:drawableLeft="@drawable/account"
-            android:textColor="#FF444848"
-            android:backgroundTint="#2b96a0"
+            android:textColor="#f9f6f6"
+            android:backgroundTint="#7b7c80"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"/>
         <Button
@@ -104,8 +104,8 @@
             android:layout_marginLeft="10dp"
             android:textSize="17sp"
             android:drawableLeft="@drawable/account_plus"
-            android:textColor="#FF444848"
-            android:backgroundTint="#2b96a0"
+            android:textColor="#f9f6f6"
+            android:backgroundTint="#7b7c80"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"/>
 
